--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -17,7 +17,7 @@ body {
     -webkit-tap-highlight-color: transparent;
     outline: 0;
     width: 100%;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     margin: 0 auto;
         height: 100%;
 }
